// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders basic unchanged 1`] = `
.c6 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
}

.c3 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 100%;
  border-radius: 4px;
  overflow: hidden;
  border-collapse: collapse;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 24px;
  background-color: #F4F4F4;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 24px;
  border-top: 1px solid #E1E1E1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c2 .c7 {
  background-color: #FFFFFF;
}

<div>
  <table
    class="c0"
  >
    <thead
      class="c1"
    >
      <tr
        class="c2"
      >
        <th
          class="c3 c4"
        >
          Column 1
        </th>
        <th
          class="c3 c4"
        >
          Column 2
        </th>
      </tr>
    </thead>
    <tbody
      class="c5"
    >
      <tr
        class="c2"
      >
        <td
          class="c6 c7 c8"
        >
          column 1
        </td>
        <td
          class="c6 c7 c8"
        >
          column 2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table renders with active row unchanged 1`] = `
.c7 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
}

.c3 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 100%;
  border-radius: 4px;
  overflow: hidden;
  border-collapse: collapse;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 24px;
  background-color: #F4F4F4;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 24px;
  border-top: 1px solid #E1E1E1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c2 .c8 {
  background-color: #FFFFFF;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c6 .c8 {
  background-color: #F1ECFF;
}

<div>
  <table
    class="c0"
  >
    <thead
      class="c1"
    >
      <tr
        class="c2"
      >
        <th
          class="c3 c4"
        >
          Column 1
        </th>
        <th
          class="c3 c4"
        >
          Column 2
        </th>
      </tr>
    </thead>
    <tbody
      class="c5"
    >
      <tr
        class="c6"
      >
        <td
          class="c7 c8 c9"
        >
          column 1
        </td>
        <td
          class="c7 c8 c9"
        >
          column 2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
